Interim changes since PyNDN v2.0beta4 (2015-07-02)
--------------------------------------------------

Changes
* In security, added KeyChain.createIdentityAndCertificate which returns the
  certificate name, instead of the deprecated createIdentity which returns the
  key name.
* In ThreadsafeFace, remove support for stopWhen() since this requires a
  processEvents loop which we want to avoid when using asyncio. The application
  must stop the asyncio loop - see examples/test_get_async_threadsafe.py .
* In ThreadsafeFace, don't automatically import it into the pyndn module since
  asyncio is optional. To explicitly import it, use:
  from pyndn.threadsafe_face import ThreadsafeFace
* Added AsyncTcpTransport and AsyncUnixTransport which use asyncio and do not
  need you to call processEvents.

Deprecated
* Deprecated KeyChain.createIdentity. Use createIdentityAndCertificate which
  returns the certificate name instead of the key name.
* In Interest, deprecated get/setScope since it is for NDNx and NFD does not use it.

Bug fixes
* http://redmine.named-data.net/issues/2846 Self-signed cert name needs a version component.
* http://redmine.named-data.net/issues/2847 Lower-case "ksk-" in generated key name.

PyNDN v2.0beta4 (2015-05-13)
----------------------------

Changes
* http://redmine.named-data.net/issues/2624 By default, throw an exception when
  using the deprecated NDNx and binary XML wire format. To enable support while
  you upgrade your code to use NFD, in your main application set
  WireFormat.ENABLE_NDNX = True
* http://redmine.named-data.net/issues/1921 In Face, added getMaxNdnPacketSize().
  expressInterest and putData throw an exception if the encoded size exceeds it.
* http://redmine.named-data.net/issues/2566 In Face, added setInterestFilter. In
  registerPrefix, make the onInterest callback optional.
* Face: In registerPrefix, changed the onInterest callback to pass interestFilterId
  instead of registeredPrefixId.